[gd_scene load_steps=9 format=3 uid="uid://bavgw8hew7hmh"]

[ext_resource type="Script" path="res://sword/sword.gd" id="1_a1xff"]
[ext_resource type="Texture2D" uid="uid://ubca3qyue5g0" path="res://sword/katana.png" id="2_07jtr"]
[ext_resource type="Script" path="res://nodes/Hitbox.gd" id="3_knd82"]

[sub_resource type="Animation" id="Animation_s1oh5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weaponPivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weaponPivot/Sprite2D/Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, -35)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weaponPivot/Sprite2D/Hitbox:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weaponPivot/Sprite2D/Hitbox/SwordCollider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("weaponPivot/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(122, -31.3333)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("weaponPivot/Sprite2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ldl4c"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weaponPivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weaponPivot/Sprite2D/Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, -35)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weaponPivot/Sprite2D/Hitbox:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weaponPivot/Sprite2D/Hitbox/SwordCollider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("weaponPivot/Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0796233, -0.123222, -0.0796233]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("weaponPivot/Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(123.333, -32.6667), Vector2(120, -38), Vector2(123.333, -32.6667)]
}

[sub_resource type="Animation" id="Animation_1isax"]
resource_name = "swing"
length = 0.34
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weaponPivot/Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.2, 0.24, 0.28, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 0, 1, 2, 3, 4, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weaponPivot/Sprite2D/Hitbox/SwordCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weaponPivot/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.2, 0.24, 0.28, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(122, -31.3333), Vector2(106, -70.6667), Vector2(166, 4), Vector2(161.333, 62), Vector2(134, 95.3333), Vector2(99.3333, 116), Vector2(122, -31.3333)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weaponPivot/Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.2, 0.24, 0.28, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.224992, 0.411173, 1.41543, 1.62167, 1.97807, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a1cq6"]
_data = {
"RESET": SubResource("Animation_s1oh5"),
"idle": SubResource("Animation_ldl4c"),
"swing": SubResource("Animation_1isax")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s8l2k"]
radius = 2.26727
height = 31.4317

[node name="Sword" type="Area2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_a1xff")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a1cq6")
}

[node name="weaponPivot" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="weaponPivot"]
position = Vector2(122, -31.3333)
scale = Vector2(3.05706, 3.30067)
texture = ExtResource("2_07jtr")
vframes = 5

[node name="Hitbox" type="Area2D" parent="weaponPivot/Sprite2D"]
position = Vector2(-30, -35)
collision_layer = 2
collision_mask = 0
script = ExtResource("3_knd82")

[node name="SwordCollider" type="CollisionShape2D" parent="weaponPivot/Sprite2D/Hitbox"]
position = Vector2(32.7888, 31.3099)
rotation = 0.785128
shape = SubResource("CapsuleShape2D_s8l2k")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
